Phase2/works
athira@INTVMLT2342:/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/build$
 make
Consolidate compiler generated dependencies of target server
[ 33%] Built target server
Consolidate compiler generated dependencies of target client
[ 66%] Built target client
Consolidate compiler generated dependencies of target test_system_stats
[ 83%] Building CXX object CMakeFiles/test_system_stats.dir/test/test_system_stats.cpp.o
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp: In member function ‘virtual void SystemStatsTest_LoadConfig_Test::TestBody()’:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp:187:15: error: too many arguments to function ‘void loadConfig()’
  187 |     loadConfig(logging_interval);
      |     ~~~~~~~~~~^~~~~~~~~~~~~~~~~~
In file included from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp:157:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/include/server.h:16:6: note: declared here
   16 | void loadConfig();
      |      ^~~~~~~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp: In member function ‘virtual void SystemStatsTest_LoadConfig_InvalidXML_Test::TestBody()’:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp:197:15: error: too many arguments to function ‘void loadConfig()’
  197 |     loadConfig(logging_interval);
      |     ~~~~~~~~~~^~~~~~~~~~~~~~~~~~
In file included from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp:157:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/include/server.h:16:6: note: declared here
   16 | void loadConfig();
      |      ^~~~~~~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp: In lambda function:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp:218:13: error: ‘startServer’ was not declared in this scope
  218 |             startServer();
      |             ^~~~~~~~~~~
make[2]: *** [CMakeFiles/test_system_stats.dir/build.make:76: CMakeFiles/test_system_stats.dir/test/test_system_stats.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/test_system_stats.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
